[package]
name = "sorted-vec"
version = "0.3.4"
authors = ["Shane Pearman <spearman@gitlab.com>"]
license = "Apache-2.0"
description = "Create and maintain sorted vectors"
repository = "https://gitlab.com/spearman/sorted-vec"
readme = "README.md"

[dependencies]
serde = { version = "1.*", features = [ "derive" ], optional = true }
