[package]
name = "sorted-vec2"
version = "0.1.0"
authors = ["Shane Pearman <spearman@gitlab.com>"]
license = "Apache-2.0"
description = "Maintained successor to the sorted-vec crate"
repository = "https://gitlab.com/spearman/sorted-vec"
readme = "README.md"
edition = "2021"

[dependencies]
serde = { version = "1.*", features = ["derive"], optional = true }
is_sorted = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.*"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:is_sorted"]
serde-nontransparent = ["serde"]

[[example]]
name = "serde"
required-features = ["serde"]
